--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
 		"@cloudflare/vitest-pool-workers": "^0.6.4",
 		"vitest": "~2.1.9",
 		"wrangler": "^3.108.1"
+	},
+	"dependencies": {
+		"postal-mime": "^2.4.3"
 	}
 }
